--- a/src/app/users/users-table/users-table.component.scss
+++ b/src/app/users/users-table/users-table.component.scss
@@ -58,3 +58,25 @@
       }
     }
   }
+.add-user-button {
+  font-size: 18px;
+  color: white;
+  background-color: #4CAF50;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+
+  &:hover {
+    background-color: #3e8e41;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
+  }
+
+  &:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+}
